	nodePar and edgePar settings and for edge labeling computes the
	extents of the diamond more correctly.

    o	deparse(), dput() and dump() have a new 'control' argument to
	control the level of detail when deparsing. dump() defaults to
	the most detail, the others default to less.  See ?deparse
	for the details.

    o	dir.create() now expands '~' in filenames.

    o	dyn.load() and libary.dynam() return an object describing the
	DLL that was loaded. For packages with namespaces, the DLL
	objects are stored in a list within the namespace.

    o	New function eapply() - apply for environments.	 The supplied
	function is applied to each element of the environment; the order
	of application is not specified.

    o	edit() and fix() use the object name in the window caption on
	some platforms (e.g. Windows).

    o	Function file.edit() function added: like file.show(), but
	allows editing.

    o	fisher.test(*, conf.int=FALSE) allows the confidence interval
	computation to be skipped.

    o	formula() methods for classes "lm" and "glm" used the expanded
	formula (with '.' expanded) from the terms component.

    o	The `formula' method for ftable() now looks for variables in the
	environment of the formula before the usual search path.

    o	A new function getDLLRegisteredRoutines() returns information
	about the routines available from a DLL that were explicitly
	registered with R's dynamic loading facilities.

    o	A new function getLoadedDLLs() returns information about the
	DLLs that are currently loaded within this session.

    o	The package element returned by getNativeSymbolInfo() contains
	reference to both the internal object used to resolve symbols
	with the DLL, and the internal DllInfo structure used to
	represent the DLL within R.

    o	help() now returns information about available documentation for
	a given topic, and notifies about multiple matches.

    o	heatmap() has a new argument 'reorderfun'.
