@@ -197,6 +197,14 @@ static void putdots(int *pold, int new)
     }
     if(R_Consolefile) fflush(R_Consolefile);
 }
+
+static void putdashes(int *pold, int new)
+{
+    int i, old = *pold;
+    *pold = new;
+    for(i = old; i < new; i++)  REprintf("=");
+    if(R_Consolefile) fflush(R_Consolefile);
+}
 #endif
 
 /* note, ALL the possible structures have the first two elements */
@@ -269,7 +277,7 @@ static SEXP in_do_download(SEXP call, SEXP op, SEXP args, SEXP env)
 
 	FILE *out;
 	void *ctxt;
-	int len, total, guess, nnew, nbytes = 0;
+	int len, total, guess, nbytes = 0;
 	char buf[IBUFSIZE];
 #ifndef Win32
 	int ndots = 0;
@@ -288,8 +296,8 @@ static SEXP in_do_download(SEXP call, SEXP op, SEXP args, SEXP env)
 	else {
 	    if(!quiet) REprintf("opened URL\n", url);
 	    guess = total = ((inetconn *)ctxt)->length;
-	    if (guess <= 0) guess = 100 * 1024;
 #ifdef Win32
+	    if (guess <= 0) guess = 100 * 1024;
 	    R_FlushConsole();
 	    wprog = newwindow("Download progress", rect(0, 0, 540, 100),
 			      Titlebar | Centered);
@@ -306,7 +314,6 @@ static SEXP in_do_download(SEXP call, SEXP op, SEXP args, SEXP env)
 	    while ((len = in_R_HTTPRead(ctxt, buf, sizeof(buf))) > 0) {
 		fwrite(buf, 1, len, out);
 		nbytes += len;
-		nnew = nbytes/1024;
 #ifdef Win32
 		if(nbytes > guess) {
 		    guess *= 2;
@@ -314,7 +321,10 @@ static SEXP in_do_download(SEXP call, SEXP op, SEXP args, SEXP env)
 		}
 		setprogressbar(pb, nbytes);
 #else
-		if(!quiet) putdots(&ndots, nnew);
+		if(!quiet) {
+		    if(guess <= 0) putdots(&ndots, nbytes/1024);
+		    else putdashes(&ndots, 50*nbytes/guess);
+		}
 #endif
 	    }
 	    in_R_HTTPClose(ctxt);
@@ -346,7 +356,7 @@ static SEXP in_do_download(SEXP call, SEXP op, SEXP args, SEXP env)
 
 	FILE *out;
 	void *ctxt;
-	int len, total, guess, nnew, nbytes = 0;
+	int len, total, guess, nbytes = 0;
 	char buf[IBUFSIZE];
 #ifndef Win32
 	int ndots = 0;
@@ -365,8 +375,8 @@ static SEXP in_do_download(SEXP call, SEXP op, SEXP args, SEXP env)
 	else {
 	    if(!quiet) REprintf("opened URL\n", url);
 	    guess = total = ((inetconn *)ctxt)->length;
-	    if (guess <= 0) guess = 100 * 1024;
 #ifdef Win32
+	    if (guess <= 0) guess = 100 * 1024;
 	    R_FlushConsole();
 	    wprog = newwindow("Download progress", rect(0, 0, 540, 100),
 			      Titlebar | Centered);
@@ -383,7 +393,6 @@ static SEXP in_do_download(SEXP call, SEXP op, SEXP args, SEXP env)
 	    while ((len = in_R_FTPRead(ctxt, buf, sizeof(buf))) > 0) {
 		fwrite(buf, 1, len, out);
 		nbytes += len;
-		nnew = nbytes/1024;
 #ifdef Win32
 		if(nbytes > guess) {
 		    guess *= 2;
@@ -391,7 +400,10 @@ static SEXP in_do_download(SEXP call, SEXP op, SEXP args, SEXP env)
 		}
 		setprogressbar(pb, nbytes);
 #else
-		if(!quiet) putdots(&ndots, nnew);
+		if(!quiet) {
+		    if(guess <= 0) putdots(&ndots, nbytes/1024);
+		    else putdashes(&ndots, 50*nbytes/guess);
+		}
 #endif
 	    }
 	    in_R_FTPClose(ctxt);
